Fix map overflowing Fix Bootstrap to make fixed navbar to display map and navbar on screen without needing to scroll Fix CSS container-full height from 100vh to 100%

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 .row,
 .container-full {
     font-family: "Ubuntu", sans-serif;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-color: lightgray;
     text-align: center;
